# AeroQuad

./: .gitignore  AQ Batt Monitor Werte.docx  AQ+Batt+Monitor+Werte.docx  AQMath.h  Accel.h  AeroQuad.h  AeroQuad.ino  AeroQuad.pde  AeroQuadMegaV1.h  AeroQuadMegaV2.h  AeroQuadV1.h  AeroQuadV18.h  AeroQuadV1_IDG.h  AeroQuadWii.h  AeroQuad_ICD.txt  AeroQuad_ICD.xlsx  Altitude.h  BatteryMonitor.h  BatteryReadArmLed.h  CHR6DM.h  Camera.h  Compass.h  CustomConfig.h  DataAcquisition.h  DataStorage.h  EEPROM.pde  EEPROM_AQ.h  Eeprom.h  Eeprom.pde  Filter.h  Filter.pde  FixedPoint.h  FlightAngle.h  FlightCommand.ino  FlightCommand.pde  FlightControl.ino  FlightControl.pde  GPS.h  Gyro.h  I2C.h  (+32 more)
AQMinimOsd/: AQMinimOsd.ino  AQSerial.h  Config.h  GlobalVariables.h  MAX7456_Font.h  Max7456.ino  Screen.ino  Serial.ino  symbols.h
AeroQuad/: .gitignore  AQMath.h  Accel.h  AeroQuad.h  AeroQuad.ino  AeroQuad.opensdf  AeroQuad.pde  AeroQuad.sln  AeroQuad.vcxproj  AeroQuad.vcxproj.filters  AltitudeControlProcessor.h  CHR6DM.h  Compass.h  DataAcquisition.h  DataStorage.h  FlightAngle.h  FlightCommand.pde  FlightCommandProcessor.h  FlightControl.pde  FlightControlHexPlusMode.h  FlightControlHexXMode.h  FlightControlPlusMode.h  FlightControlProcessor.h  FlightControlQuadPlusMode.h  FlightControlQuadXMode.h  FlightControlXMode.h  GPS.h  GpsNavigator.h  GpsUtility.h  Gyro.h  HeadingHoldProcessor.h  I2C.h  LedStatusProcessor.h  MAVLink.h  MavLink.h  Motors.h  Navigator.h  OSDDisplayController.h  OSDMenu.h  PID.h  (+9 more)
AeroQuad/.vmprogram/: .AeroQuad.vsarduino.h  Compile.vmps.xml  Configuration.Debug.vmps.xml
AeroQuad/Debug/: AeroQuad.lastbuildstate
AeroQuad32/: AeroQuadMain.cpp  AeroQuad_STM32.h  SerialMapping.h  log.c  log.h  platform_aeroquad32.h  platform_discoveryf4.h  platform_freeflight.h  platform_maple_mini.h  platform_naze32.h
AeroQuad32/MapleCompatibility/: Arduino.h  EEPROM.cpp  EEPROM.h  WProgram.h  flash_stm32.c  flash_stm32.h  flash_stm32F1.c  flash_stm32F2.c  pins_arduino.h
AeroQuadBak/: AeroQuad.h  AeroQuad.pde  Configuration.h
Aeroquad/: AeroQuad.h  AeroQuad.pde  DataStorage.h  FlightCommand.pde  FlightControl.pde  FlightControlHexPlusMode.h  FlightControlHexXMode.h  FlightControlQuadPlusMode.h  FlightControlQuadXMode.h  FlightControlTriMode.h  OSD.h  SerialCom.pde  Template.h
BuildAQ32/: Build.bat  FlashDFU.bat  FlashDFUSeF4.bat  FlashV2.bat  FlashV2_LowMem.bat  ListDFUSeDevices.bat  Makefile  ReBuild.bat  ReBuildLibMaple.bat  ReadMe.txt  bl64k.img  buildAndFlash.bat  flash_bl64k.bat
BuildAQ32/.dep/: AQMath.o.d  AeroQuadMain.o.d  Device_I2C.o.d  EEPROM.o.d  flash_stm32.o.d
ITG3200TempCalibration/: AeroQuad.h  DataStorage.h  ITG3200TempCalibration.ino  PID.h
Libmaple/libmaple/contrib/automake/: Makefile.am  configure.ac
MAX7456_Font_Updater/: MAX7456_Font.h  MAX7456_Font_Updater.ino  font.h  font.mcm  mcm2h.pl
MavLink GCS Files/: README.markdown  files.rar  generic.rar
OSD_font/: OSD_font.pde  font.h  font.mcm  mcm2h.pl
ReadMeFirst_files/: filelist.xml
ServoTimer2/: ServoTimer2.cpp  ServoTimer2.h  keywords.txt
applet/: AeroQuad.cpp  AeroQuad.elf  AeroQuad.hex  Filter.pde  Motors.pde  Sensors.pde  SerialCommand.pde  SerialTelemetry.pde
(+1254 files in other folders)
